# zen-lang

./: .gitattributes  .gitignore  LICENSE  README.md
demo/: TwoSum.zen
examples/: HelloWorld.zen
support/syntax highlight config file for VS Code/: package.json
support/syntax highlight config file for VS Code/syntaxes/: zen.tmLanguage.json
zen-assembler/: zasm.cpp
zen-compiler/: CMakeLists.txt  assembler.cpp  assembler.h  generator.cpp  generator.h  lexer.cpp  lexer.h  log.cpp  parser.cpp  parser.h  tree.cpp  tree.h  zc.cpp  zc.h  zenc.cpp  zenc.h
zen-compiler/zasm/: zasm.cpp  zasm.h  zasm_entry.cpp
zen-library/: Console.zen  Container.zen  DataType.zen  File.zen  Math.zen
